feature: ajusta o backend do sistema de cache embeding