@@ -1,7 +1,6 @@
 package br.cebraspe.simulado.ai;
 
-
-import br.cebraspe.simulado.ai.rag.RagSearchService;
+import br.cebraspe.simulado.ai.pipeline.RagPipelineService;
 import br.cebraspe.simulado.domain.question.Question;
 import br.cebraspe.simulado.domain.question.QuestionRepository;
 import br.cebraspe.simulado.domain.topic.TopicRepository;
@@ -18,21 +17,29 @@ import java.util.stream.Collectors;
 @Service
 public class QuestionGeneratorService {
 
-    private static final Logger log = LoggerFactory.getLogger(QuestionGeneratorService.class);
+    private static final Logger log =
+            LoggerFactory.getLogger(QuestionGeneratorService.class);
 
-    private final OllamaService        ollamaService;
-    private final RagSearchService     ragSearchService;
-    private final QuestionRepository   questionRepository;
-    private final TopicRepository      topicRepository;
-    private final ObjectMapper         objectMapper;
+    private final RagPipelineService pipeline;
+    private final QuestionRepository questionRepository;
+    private final TopicRepository    topicRepository;
+    private final ObjectMapper       objectMapper;
 
-    public QuestionGeneratorService(OllamaService ollamaService,
-                                    RagSearchService ragSearchService,
-                                    QuestionRepository questionRepository,
-                                    TopicRepository topicRepository,
-                                    ObjectMapper objectMapper) {
-        this.ollamaService      = ollamaService;
-        this.ragSearchService   = ragSearchService;
+    private static final String GENERATOR_SYSTEM =
+            """
+            Você é especialista em concursos Cebraspe.
+            Gere questões técnicas no estilo exato da banca.
+            Retorne APENAS JSON válido, sem texto antes ou depois.
+            Use linguagem formal. Cite artigos e parágrafos específicos.
+            Inclua pegadinhas com palavras absolutas (sempre, nunca,
+            exclusivamente, somente) nas questões ERRADAS.
+            """;
+
+    public QuestionGeneratorService(RagPipelineService pipeline,
+                                     QuestionRepository questionRepository,
+                                     TopicRepository topicRepository,
+                                     ObjectMapper objectMapper) {
+        this.pipeline           = pipeline;
         this.questionRepository = questionRepository;
         this.topicRepository    = topicRepository;
         this.objectMapper       = objectMapper;
@@ -40,111 +47,84 @@ public class QuestionGeneratorService {
 
     public List<Question> generateQuestions(Long topicId, Integer count) {
         var topic = topicRepository.findById(topicId)
-                .orElseThrow(() -> new RuntimeException("Tópico não encontrado: " + topicId));
+                .orElseThrow(() -> new RuntimeException(
+                        "Tópico não encontrado: " + topicId));
 
-        // Busca contexto RAG
-        var ragResults = ragSearchService.searchWithMetadata(topic.name(), 5);
-        String ragContext = ragResults.stream()
-                .map(RagSearchService.RagSearchResult::content)
-                .collect(Collectors.joining("\n\n---\n\n"));
+        String pergunta = buildGeneratorPrompt(
+                topic.name(), topic.lawReference(), topic.discipline(), count);
 
-        // Score médio de similaridade do RAG (confidence)
-        double ragConfidence = ragResults.stream()
-                .mapToDouble(r -> r.score() != null ? r.score() : 0.0)
-                .average()
-                .orElse(0.0);
+        // Pipeline completo: cache → RAG → Ollama
+        var response = pipeline.process(
+                pergunta,
+                topic.discipline(),
+                topicId,
+                GENERATOR_SYSTEM
+        );
 
-        var prompt = buildGeneratorPrompt(topic.name(), topic.lawReference(),
-                ragContext, count);
+        double ragConfidence = response.ragChunksUsed() > 0 ? 0.8 : 0.4;
 
-        String response = ragContext.isBlank()
-                ? ollamaService.chat(prompt)
-                : ollamaService.chatWithContext(prompt, ragContext);
+        log.info("Gerador: fonte={} chunks={} topico={}",
+                response.source(), response.ragChunksUsed(), topic.name());
 
-        return parseQuestions(response, topicId, ragConfidence);
+        return parseAndSave(response.resposta(), topicId, ragConfidence);
     }
 
     private String buildGeneratorPrompt(String topicName, String lawRef,
-                                        String context, Integer count) {
+                                         String discipline, int count) {
         return """
-                Gere %d questões no estilo CEBRASPE (Certo/Errado) sobre o tema:
-                Tópico: %s | Base legal: %s
-
-                REGRAS OBRIGATÓRIAS:
-                - Use linguagem formal e técnica
-                - Inclua palavras-chave armadilha (sempre, nunca, exclusivamente, somente) em algumas questões ERRADAS
-                - Cite artigos/parágrafos específicos
-                - Varie entre CERTO e ERRADO (aprox. 50/50)
-
-                Retorne SOMENTE JSON array, sem texto antes ou depois:
-                [
-                  {
-                    "statement": "texto da assertiva",
-                    "correctAnswer": true,
-                    "lawParagraph": "Art. X, §Y da Lei Z...",
-                    "lawReference": "Lei nº X/XXXX",
-                    "explanation": "explicação técnica",
-                    "professorTip": "dica do professor sobre esta questão",
-                    "trapKeywords": ["palavra1"],
-                    "difficulty": "FACIL"
-                  }
-                ]
+                Gere %d questões no estilo CEBRASPE (Certo/Errado) sobre:
+                Tópico: %s | Disciplina: %s | Base legal: %s
+                
+                REGRAS:
+                - 50%% CERTO, 50%% ERRADO
+                - Pegadinhas com: sempre, nunca, exclusivamente, somente, apenas
+                - Cite artigos e parágrafos específicos
+                - Varie dificuldade: FACIL/MEDIO/DIFICIL
+                
+                Retorne SOMENTE este JSON array:
+                [{"statement":"...","correctAnswer":true,"lawParagraph":"Art...","lawReference":"Lei...","explanation":"...","professorTip":"...","trapKeywords":["palavra"],"difficulty":"FACIL"}]
                 """.formatted(count, topicName,
-                lawRef != null ? lawRef : "legislação pertinente");
+                discipline != null ? discipline : "Direito Público",
+                lawRef     != null ? lawRef     : "legislação pertinente");
     }
 
-    // ── CORREÇÃO: TypeReference explícito evita o problema de inferência ──
-    private List<Question> parseQuestions(String response, Long topicId,
-                                          double ragConfidence) {
+    private List<Question> parseAndSave(String response, Long topicId,
+                                         double ragConfidence) {
         try {
             String json = extractJsonArray(response);
-
-            // TypeReference explícito resolve o "Object cannot be converted to Question"
             List<Map<String, Object>> list = objectMapper.readValue(
-                    json, new TypeReference<List<Map<String, Object>>>() {}
-            );
+                    json, new TypeReference<>() {});
 
             return list.stream()
                     .map(map -> mapToQuestion(map, topicId, ragConfidence))
                     .map(questionRepository::save)
-                    .toList();
+                    .collect(Collectors.toList());
 
         } catch (Exception e) {
-            log.warn("Erro ao parsear questões da IA: {}", e.getMessage());
+            log.warn("Erro ao parsear questões: {}", e.getMessage());
             return List.of();
         }
     }
 
     private Question mapToQuestion(Map<String, Object> map, Long topicId,
-                                   double ragConfidence) {
-        // trapKeywords pode vir como List<String> ou null
+                                    double ragConfidence) {
         @SuppressWarnings("unchecked")
         List<String> traps = map.get("trapKeywords") instanceof List<?>
-                ? (List<String>) map.get("trapKeywords")
-                : List.of();
+                ? (List<String>) map.get("trapKeywords") : List.of();
 
         return new Question(
-                null,
-                topicId,
-                null,
+                null, topicId, null,
                 (String)  map.get("statement"),
-                (Boolean) map.get("correctAnswer"),
+                (Boolean) map.getOrDefault("correctAnswer", false),
                 (String)  map.get("lawParagraph"),
                 (String)  map.get("lawReference"),
                 (String)  map.get("explanation"),
                 (String)  map.get("professorTip"),
-                traps,
-                null,
-                "IA-GERADA",
-                (String)  map.getOrDefault("difficulty", "MEDIO"),
-                // ── Campos IA ──────────────────────────────────────────
-                false,                                    // iaReviewed — pendente
-                null,                                     // iaApproved — aguardando
-                BigDecimal.valueOf(ragConfidence),        // iaConfidence
-                null,                                     // reviewNote
-                null,                                     // reviewedAt
-                // ───────────────────────────────────────────────────────
-                null                                      // createdAt
+                traps, null, "IA-GERADA",
+                (String) map.getOrDefault("difficulty", "MEDIO"),
+                false, null,
+                BigDecimal.valueOf(ragConfidence),
+                null, null, null
         );
     }
 
@@ -152,7 +132,7 @@ public class QuestionGeneratorService {
         if (text == null) return "[]";
         int start = text.indexOf('[');
         int end   = text.lastIndexOf(']');
-        if (start >= 0 && end > start) return text.substring(start, end + 1);
-        return "[]";
+        return (start >= 0 && end > start)
+                ? text.substring(start, end + 1) : "[]";
     }
 }
